[gd_scene load_steps=6 format=3 uid="uid://naxi80a8lev5"]

[ext_resource type="Script" path="res://scenes/player/buildings/building_tower_heal.gd" id="1_u7i2t"]
[ext_resource type="Texture2D" uid="uid://4cug6el4c6ot" path="res://assets/Lolli/heal_house_animation.png" id="2_kwecg"]

[sub_resource type="Animation" id="Animation_del4d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xxko0"]
resource_name = "idle"
length = 0.1667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2j7ni"]
_data = {
"RESET": SubResource("Animation_del4d"),
"idle": SubResource("Animation_xxko0")
}

[node name="BuildingTowerHeal" type="StaticBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_u7i2t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kwecg")
hframes = 5
frame = 1

[node name="UpgradeTower" type="Button" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="HealTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2j7ni")
}
autoplay = "idle"
speed_scale = 0.3

[connection signal="pressed" from="Sprite2D/UpgradeTower" to="." method="_on_upgrade_tower_pressed"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
